@@ -10,6 +10,7 @@ systemd-genie (2.4) bullseye bookworm sid focal jammy; urgency=medium
         * Carries through real UID from wrapper (fixes #258).
         * Use systemd-tmpfiles for WSLg support (fixes #214, #175).
         * Warn user if unsupported Unicode hostname (warns on #268, no fix).
+        * arm64 package for Fedora.
         * Miscellaneous packaging fixes.
 
  -- Alistair Young <avatar@arkane-systems.net>  Tue, 22 Mar 2022 08:15:00 -0500
